# StrainFLAIR

./: .gitmodules  CMakeLists.txt  COOKBOOK.md  MINIMAL_EXAMPLE.md  README.md  StrainFLAIR.sh  StrainPROG.sh  TODO.md  env.yml  list_7strains.txt  list_fasta.txt  setup.cfg  setup.py
conda/: README.md
conda/strainflair/: build.sh  meta.yaml
data/: list_fasta_sim.txt
scripts/: analysis.R  fastani_to_csv.py  genes_prediction.py  graphs_construction.py  graphs_construction_part1.py  mapping_parser.py  mapping_parser_onging.py  notused_graphs_construction.py  read_simulator.py  testing.py
strain_profiling_vg/: pipeline.txt
strain_profiling_vg/scripts/: compute_strains_abundance.py  concat_graphs.py  genes_prediction.py  graphs_construction.py  json2csv.py
strainflair/: __init__.py  __main__.py  compute_strains_abundance.py  concat_graphs.py  genes_prediction.py  graphs_construction.py  json2csv.py
