[metadata]
name = StrainFlair
version = 0.0.1
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
author = TODO
author_email = TODO
url = TODO
licence = MIT

[options]
zip_safe = False
packages = strainflair
install_requires =
  #Mettre les dépendances python ici pas dans le conda, ex:
  pandas>=1.2.1

[zest.releaser]
create-wheel = yes

[options.entry_points]
console_scripts = 
    compute_strains_abundance = strainflair.__main__:compute_strains_abundance_main
     = strainflair.__main__:concat_graphs_main
    genes_prediction = strainflair.__main__:genes_prediction_main
    graphs_construction = strainflair.__main__:graphs_construction_main
    json2csv = strainflair.__main__:json2csv_main
