[metadata]
name = StrainFlair
version = 0.0.1
description = StrainFLAIR (STRAIN-level proFiLing using vArIation gRaph) is a tool for strain identification and quantification that uses variation graph representation of genes sequences
long_description = file: README.md
long_description_content_type = text/markdown
author = Kévin Da Sylva - Pierre Peterlongo
author_email = Kevin.Da-Silva@inria.fr, pierre.peterlongo@inria.fr
url = https://github.com/kevsilva/StrainFLAIR
licence = GNU Affero General Public License v3.0

[options]
zip_safe = False
packages = strainflair
install_requires =
  #Mettre les dépendances python ici pas dans le conda, ex:
  pandas>=1.2.1
  Bio>=0.3.0
scripts = StrainFLAIR.sh

[zest.releaser]
create-wheel = yes

[options.entry_points]
console_scripts = 
    compute_strains_abundance = strainflair.__main__:compute_strains_abundance_main
    concat_graphs = strainflair.__main__:concat_graphs_main
    genes_prediction = strainflair.__main__:genes_prediction_main
    graphs_construction = strainflair.__main__:graphs_construction_main
    json2csv = strainflair.__main__:json2csv_main
